test/files/neg/t8015-ffb.check
t8015-ffb.scala:12: warning: side-effecting nullary methods are discouraged: suggest defining as `def w()` instead
  def w = { x\u000c() }       // ^L is colored blue on this screen, hardly visible
      ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
